--- a/interactive_engine/compiler/pom.xml
+++ b/interactive_engine/compiler/pom.xml
@@ -255,7 +255,11 @@
                     <pluginId>grpc-java</pluginId>
                     <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}
                     </pluginArtifact>
-                    <protoSourceRoot>${project.basedir}/../executor/ir/proto</protoSourceRoot>
+                    <protoSourceRoot>${project.basedir}/../..</protoSourceRoot>
+                    <includes>
+                        <include>proto/error/frontend.proto</include>
+                        <include>interactive_engine/executor/ir/proto</include>
+                    </includes>
                     <outputDirectory>src/main/generated/</outputDirectory>
                     <clearOutputDirectory>false</clearOutputDirectory>
                 </configuration>
