a shaded pom dependency of neo4j

--- a/interactive_engine/compiler/pom.xml
+++ b/interactive_engine/compiler/pom.xml
@@ -91,7 +91,6 @@
         <dependency>
             <groupId>org.javatuples</groupId>
             <artifactId>javatuples</artifactId>
-            <version>1.2</version>
         </dependency>
         <dependency>
             <groupId>org.antlr</groupId>
@@ -126,7 +125,8 @@
         </dependency>
         <dependency>
             <groupId>org.neo4j</groupId>
-            <artifactId>neo4j</artifactId>
+            <artifactId>neo4j-shaded</artifactId>
+            <version>4.4.0</version>
         </dependency>
         <dependency>
             <groupId>org.neo4j.driver</groupId>
