--- a/interactive_engine/common/pom.xml
+++ b/interactive_engine/common/pom.xml
@@ -64,6 +64,10 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
+    <dependency>
+        <groupId>org.javatuples</groupId>
+        <artifactId>javatuples</artifactId>
+    </dependency>
   </dependencies>
 
 
