--- a/.github/workflows/local-ci.yml
+++ b/.github/workflows/local-ci.yml
@@ -297,7 +297,8 @@ jobs:
           popd
 
           # install tensorflow
-          # python3 -m pip install --no-cache-dir pytest pytest-xdist "tensorflow" "pandas" --user
+          python3 -m pip install --no-cache-dir pytest pytest-xdist "pandas" --user
+          # python3 -m pip install --no-cache-dir "tensorflow" --user
           # install pytorch
           # python3 -m pip install --no-cache-dir "torch<=2.2.1" "networkx<=3.0" --index-url https://download.pytorch.org/whl/cpu
           # install java
