introduce boost leaf and use bl::result to wrap the result of adhoc queries
Committed-by: xiaolei.zl from Dev container

Committed-by: xiaolei.zl from Dev container

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,7 @@
 [submodule "flex/third_party/nlohmann-json"]
 	path = flex/third_party/nlohmann-json
 	url = https://github.com/nlohmann/json.git
+
+[submodule "flex/third_party/leaf"]
+	path = flex/third_party/leaf
+	url = https://github.com/boostorg/leaf.git
