add circle parallel and try to debug memory increasing
Committed-by: xiaolei.zl from Dev container

--- a/analytical_engine/java/grape-demo/pom.xml
+++ b/analytical_engine/java/grape-demo/pom.xml
@@ -66,6 +66,11 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency> -->
+    <dependency>
+        <groupId>com.carrotsearch</groupId>
+        <artifactId>hppc</artifactId>
+        <version>0.8.1</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -123,6 +128,7 @@
                   <include>com.alibaba.fastffi:*</include>
                   <include>it.unimi.dsi:fastutil*</include>
                   <include>org.apache.spark:*</include>
+                  <include>com.carrotsearch:hppc*</include>
                 </includes>
               </artifactSet>
               <filters>
