--- a/.github/workflows/gae.yml
+++ b/.github/workflows/gae.yml
@@ -48,10 +48,6 @@ jobs:
         python3 -m pip install --upgrade pip setuptools
         make coordinator
 
-    - name: Setup tmate session
-      if: false
-      uses: mxschmitt/action-tmate@v3
-
     - name: Run Cpp Test
       env:
         GS_TEST_DIR: ${{ github.workspace }}/gstest
@@ -87,6 +83,10 @@ jobs:
         cd ${GITHUB_WORKSPACE}/python
         python3 -m pytest --cov=graphscope --cov-config=.coveragerc --cov-report=xml \
           --cov-report=term --exitfirst -s -v graphscope/tests/unittest/test_java_app.py
+
+    - name: Setup tmate session
+      if: always()
+      uses: mxschmitt/action-tmate@v3
 
     - name: Upload Coverage
       uses: codecov/codecov-action@v3
