Revert "a shaded pom dependency of neo4j"
This reverts commit 39423e9485393af1afa70511a9f575a5d4991a3d.

--- a/interactive_engine/compiler/pom.xml
+++ b/interactive_engine/compiler/pom.xml
@@ -91,6 +91,7 @@
         <dependency>
             <groupId>org.javatuples</groupId>
             <artifactId>javatuples</artifactId>
+            <version>1.2</version>
         </dependency>
         <dependency>
             <groupId>org.antlr</groupId>
@@ -125,8 +126,7 @@
         </dependency>
         <dependency>
             <groupId>org.neo4j</groupId>
-            <artifactId>neo4j-shaded</artifactId>
-            <version>4.4.0</version>
+            <artifactId>neo4j</artifactId>
         </dependency>
         <dependency>
             <groupId>org.neo4j.driver</groupId>
