--- a/.github/workflows/gss.yml
+++ b/.github/workflows/gss.yml
@@ -96,7 +96,7 @@ jobs:
         . ${HOME}/.graphscope_env
         git clone -b master --single-branch --depth=1 https://github.com/7br/gstest.git /tmp/gstest
         mv /tmp/gstest/flex/ldbc-sf01-long-date /tmp/gstest/ldbc
-        mv /tmp/gstest/flex/movies /tmp/gstest/movies
+        cp -r flex/interactive/examples/movies /tmp/gstest/
         cd interactive_engine/groot-client && ./gopt_groot_test.sh
 
     - name: Upload tools for helm test to Artifact
