refactor(interactive): Rename the configuration file for Interactive, and remove some unused configuration (#4202)
Fix #4201 

- [x]  Remove unused configuration items(directories)
- [x] Support for configuring log level dynamically in engine side.

--- a/flex/tests/hqps/interactive_config_test.yaml
+++ b/flex/tests/hqps/interactive_config_test.yaml
@@ -1,10 +1,5 @@
-directories:
-  workspace: /tmp/interactive_workspace
-  subdirs:
-    data: data
-    logs: logs
-    conf: conf
 log_level: INFO
+verbose_level: 10
 default_graph: modern_graph
 compute_engine:
   type: hiactor
