--- a/charts/graphscope-store/values.yaml
+++ b/charts/graphscope-store/values.yaml
@@ -640,7 +640,8 @@ distributed:
   enabled: false
 
 collect:
-  statistics: false
-  initial:
-    delay: 5
-  interval: 60
+  statistics:
+    enabled: false
+    initial:
+      delay: 5
+    interval: 60
